compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__type_aliasing@scalar_to_array.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "type A = [B]"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            1680222667371058712,
        ): Type(
            Alias(
                AliasDefinition {
                    id: ItemId(
                        1680222667371058712,
                    ),
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "A",
                                location: <internal>:5:6,
                            },
                            type_arguments: [],
                            location: <internal>:5:6,
                        },
                        location: <internal>:5:6,
                    },
                    definition: Type {
                        id: ItemId(
                            2573095290496688527,
                        ),
                        name: Path {
                            root: [
                                Namespace {
                                    name: Identifier {
                                        name: "std",
                                        location: <internal>:0:0,
                                    },
                                },
                            ],
                            name: Type {
                                name: Identifier {
                                    name: "Array",
                                    location: <internal>:0:0,
                                },
                                type_arguments: [
                                    Type {
                                        id: ItemId(
                                            10826187383264222936,
                                        ),
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "B",
                                                    location: <internal>:10:11,
                                                },
                                                type_arguments: [],
                                                location: <internal>:10:12,
                                            },
                                            location: <internal>:10:12,
                                        },
                                        location: <internal>:10:12,
                                    },
                                ],
                                location: <internal>:9:12,
                            },
                            location: <internal>:9:12,
                        },
                        location: <internal>:9:12,
                    },
                    location: <internal>:0:12,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
