compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__type_aliasing@scalar_to_generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: type A = B<C>
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14300676183875094141,
        ): Type(
            Alias(
                AliasDefinition {
                    id: ItemId(
                        14300676183875094141,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "A",
                                location: <internal>:5:6,
                            },
                        ),
                        location: <internal>:5:6,
                    },
                    definition: Type {
                        id: ItemId(
                            15305381369542258004,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "B",
                                    location: <internal>:9:10,
                                },
                            ),
                            location: <internal>:9:13,
                        },
                        type_params: [
                            Type {
                                id: ItemId(
                                    59532598947674694,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "C",
                                            location: <internal>:11:12,
                                        },
                                    ),
                                    location: <internal>:11:12,
                                },
                                type_params: [],
                                location: <internal>:11:12,
                            },
                        ],
                        location: <internal>:9:13,
                    },
                    location: <internal>:0:13,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
