compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "use Add in Int32 {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            5494773208919359799,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    5494773208919359799,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        12506335137184408543,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Add",
                                location: <internal>:4:7,
                            },
                        ),
                        location: <internal>:4:7,
                    },
                    type_params: [],
                    location: <internal>:4:7,
                },
                target: Type {
                    id: ItemId(
                        9261998375256972311,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [
                                    Named(
                                        Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                ],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Int32",
                                location: <internal>:0:0,
                            },
                        ),
                        location: <internal>:0:0,
                    },
                    type_params: [],
                    location: <internal>:11:16,
                },
                methods: [],
                type_parameters: [],
                location: <internal>:0:19,
            },
        ),
    },
    statements: {},
    expressions: {},
}
