compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Add<Int32> in Int32 {\n                pub fn add(other: Int32) -> Int32 {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            3729622771921818476,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    3729622771921818476,
                ),
                name: Type {
                    id: ItemId(
                        3729622771921818476,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Identifier {
                            name: "Add",
                            location: <internal>:17:20,
                        },
                        location: <internal>:17:20,
                    },
                    type_params: [
                        Type {
                            id: ItemId(
                                11582867247635641484,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [
                                            Named(
                                                Identifier {
                                                    name: "std",
                                                    location: <internal>:0:0,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                name: Identifier {
                                    name: "Int32",
                                    location: <internal>:0:0,
                                },
                                location: <internal>:0:0,
                            },
                            type_params: [],
                            location: <internal>:21:26,
                        },
                    ],
                    location: <internal>:20:27,
                },
                target: Type {
                    id: ItemId(
                        11582867247635641484,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [
                                    Named(
                                        Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    ),
                                ],
                            },
                        ),
                        name: Identifier {
                            name: "Int32",
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    type_params: [],
                    location: <internal>:31:36,
                },
                methods: [
                    TraitMethodImplementation {
                        visibility: Public,
                        name: SymbolName {
                            namespace: None,
                            name: Identifier {
                                name: "add",
                                location: <internal>:62:65,
                            },
                            location: <internal>:62:65,
                        },
                        parameters: [
                            Parameter {
                                name: Identifier {
                                    name: "other",
                                    location: <internal>:66:71,
                                },
                                param_type: Type {
                                    id: ItemId(
                                        11582867247635641484,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [
                                                    Named(
                                                        Identifier {
                                                            name: "std",
                                                            location: <internal>:0:0,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:0:0,
                                        },
                                        location: <internal>:0:0,
                                    },
                                    type_params: [],
                                    location: <internal>:73:78,
                                },
                                location: <internal>:66:78,
                            },
                        ],
                        type_parameters: [],
                        return_type: Some(
                            Type {
                                id: ItemId(
                                    11582867247635641484,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [
                                                Named(
                                                    Identifier {
                                                        name: "std",
                                                        location: <internal>:0:0,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    name: Identifier {
                                        name: "Int32",
                                        location: <internal>:0:0,
                                    },
                                    location: <internal>:0:0,
                                },
                                type_params: [],
                                location: <internal>:83:88,
                            },
                        ),
                        block: Block {
                            statements: [],
                            location: <internal>:89:91,
                        },
                        location: <internal>:55:91,
                    },
                ],
                location: <internal>:13:105,
            },
        ),
    },
    statements: {},
    expressions: {},
}
