compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@generic_trait.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use<T> Enumerable<T> in Vector<T> {\n                pub fn next() -> T { }\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            14353073384594717167,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    14353073384594717167,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        13380267704548414892,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Enumerable",
                                location: <internal>:20:30,
                            },
                            type_arguments: [
                                Type {
                                    id: ItemId(
                                        8901637729188007634,
                                    ),
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "T",
                                                location: <internal>:31:32,
                                            },
                                            type_arguments: [],
                                            location: <internal>:31:33,
                                        },
                                        location: <internal>:31:33,
                                    },
                                    location: <internal>:31:33,
                                },
                            ],
                            location: <internal>:20:36,
                        },
                        location: <internal>:20:36,
                    },
                    location: <internal>:20:36,
                },
                target: Type {
                    id: ItemId(
                        7484320765453361402,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Vector",
                                location: <internal>:37:43,
                            },
                            type_arguments: [
                                Type {
                                    id: ItemId(
                                        8901637729188007634,
                                    ),
                                    name: Path {
                                        root: [],
                                        name: Type {
                                            name: Identifier {
                                                name: "T",
                                                location: <internal>:44:45,
                                            },
                                            type_arguments: [],
                                            location: <internal>:44:46,
                                        },
                                        location: <internal>:44:46,
                                    },
                                    location: <internal>:44:46,
                                },
                            ],
                            location: <internal>:37:48,
                        },
                        location: <internal>:37:48,
                    },
                    location: <internal>:37:48,
                },
                methods: [
                    TraitMethodImplementation {
                        id: ItemId(
                            17893834130320319815,
                        ),
                        method_id: None,
                        visibility: Public,
                        name: Identifier {
                            name: "next",
                            location: <internal>:72:76,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                8901637729188007634,
                            ),
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "T",
                                        location: <internal>:82:83,
                                    },
                                    type_arguments: [],
                                    location: <internal>:82:85,
                                },
                                location: <internal>:82:85,
                            },
                            location: <internal>:82:85,
                        },
                        block: Block {
                            statements: [],
                            location: <internal>:84:87,
                        },
                        location: <internal>:65:87,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:17:18,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:17:18,
                        },
                    ],
                },
                location: <internal>:13:101,
            },
        ),
    },
    statements: {},
    expressions: {},
}
