compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__use_trait_snapshots@generic_type.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "\n            use Enumerable<T> in Vector<T> {\n                pub fn next() -> T {}\n            }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            17007826589591389512,
        ): Use(
            TraitImplementation {
                id: ItemId(
                    17007826589591389512,
                ),
                use_id: None,
                name: Type {
                    id: ItemId(
                        4863703123816121347,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Enumerable",
                                location: <internal>:17:27,
                            },
                        ),
                        location: <internal>:17:30,
                    },
                    type_params: [
                        Type {
                            id: ItemId(
                                10382560105972960337,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "T",
                                        location: <internal>:28:29,
                                    },
                                ),
                                location: <internal>:28:29,
                            },
                            type_params: [],
                            location: <internal>:28:29,
                        },
                    ],
                    location: <internal>:17:30,
                },
                target: Type {
                    id: ItemId(
                        3921845314145725332,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "Vector",
                                location: <internal>:34:40,
                            },
                        ),
                        location: <internal>:34:43,
                    },
                    type_params: [
                        Type {
                            id: ItemId(
                                10382560105972960337,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "T",
                                        location: <internal>:41:42,
                                    },
                                ),
                                location: <internal>:41:42,
                            },
                            type_params: [],
                            location: <internal>:41:42,
                        },
                    ],
                    location: <internal>:34:43,
                },
                methods: [
                    TraitMethodImplementation {
                        id: ItemId(
                            17893834130320319815,
                        ),
                        method_id: None,
                        visibility: Public,
                        name: Identifier {
                            name: "next",
                            location: <internal>:69:73,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                10382560105972960337,
                            ),
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [],
                                    },
                                ),
                                name: Named(
                                    Identifier {
                                        name: "T",
                                        location: <internal>:79:80,
                                    },
                                ),
                                location: <internal>:79:80,
                            },
                            type_params: [],
                            location: <internal>:79:80,
                        },
                        block: Block {
                            statements: [],
                            location: <internal>:81:83,
                        },
                        location: <internal>:62:83,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:13:97,
            },
        ),
    },
    statements: {},
    expressions: {},
}
